assets/src/blocks/article-teasers/block.scss
.article-teasers {
	display: flex;
	gap: 28px;

	&.article-teasers-featured {
		@media screen and (max-width: 700px) {
			flex-direction: column;
		}
	}

	.teaser {
		@media screen and (max-width: 700px) {
			flex-direction: column;

			.teaser-thumb {
				flex-basis: 200px;
				width: 100%;
				order: 0;

				& > a {
					position: relative;
				}

				img {
					height: 100%;
					object-fit: cover;
					width: 100%;

					@media screen and (max-width: 700px) {
						height: auto;
					}
				}
			}

			.teaser-content {
				order: 1;
			}
		}
	}
}

.article-teasers h3 {
	margin-top: 0;
}

.article-teasers > div {
	flex: 0 0 50%;
}

.non-featured-article-teasers {
	&.item-type-list-flex {
		li {
			padding: 32px 0 16px;
		}

		li:first-child {
			padding-top: 0;
		}

		li:last-child {
			border-bottom: none;
			padding-bottom: 0;
		}

		.teaser {
			flex-direction: row;
			display: flex;
			gap: 28px;

			@media screen and (max-width: 700px) {
				flex-direction: column;
				gap: 16px;
			}
		}
	}

	.teaser-thumb {
		flex: 0 0 40%;
	}
}

.article-teasers-list {
	ul.has-row-rules > li {
		border-bottom: 1px solid var(--wp--preset--color--medium-grey);
		padding-bottom: 60px;
		padding-top: 60px;
	}

	ul.has-row-rules > li:first-of-type {
		border-top: 1px solid var(--wp--preset--color--medium-grey);
	}

	.teaser {
		gap: 28px;
		justify-content: stretch;
	}

	.teaser-thumb {
		flex: 0 0 280px;
		height: 186.6px;
		order: 1;
		position: relative;

		@media screen and (max-width: 700px) {
			flex-basis: 0;
			height: auto;
		}

		img {
			height: auto;
		}
	}

	.teaser-content {
		flex: 1;
	}

	h3 {
		margin-bottom: 16px;
		margin-top: 16px;

		&:first-child {
			margin-top: 0;
		}
	}

	.research-topic-tags {
		margin-top: 16px;
	}
}

.featured-article-teaser {
	position: relative;

	.featured-tag {
		left: 16px;
		top: 16px;
		position: absolute;
	}
}

